--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,20 @@
+#container {
+    display: flex;
+    align-items: center;
+}
+
 #map {
     height: 100vh;
     width: 100vw;
+}
+
+#sidebar {
+    position: absolute;
+    margin-left: 20px;
+    background-color: rgba(100,100,100,0.7);
+    height: 80vh;
+    width: 20vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
