--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,21 @@
     width: 90%;
     margin-top: 5px;
 }
+
+#sidebar ol {
+    width: 90%;
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    margin: 0px;
+    padding: 0px;
+}
+
+#sidebar li {
+    width: 100%;    
+    margin-top: 10px;
+    border-bottom: 1px solid white;
+    color:white;
+}
