--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,9 @@
     border-bottom: 1px solid white;
     color:white;
 }
+
+.info-window {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
