--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+.venue-photo {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
