--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 #container {
     display: flex;
-    align-items: center;
 }
 
 #map {
@@ -11,20 +10,20 @@
 #sidebar {
     position: absolute;
     margin-left: 20px;
+    margin-top: 20px;
     background-color: rgba(100,100,100,0.7);
-    height: 80vh;
-    width: 20vw;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
 }
 
 #sidebar input {
-    width: 90%;
-    margin-top: 5px;
+    width: 85%;
 }
 
-#sidebar ol {
+.sidebar-shown ol {
     width: 90%;
     list-style-type: none;
     display: flex;
@@ -48,8 +47,103 @@
     align-items: center;
 }
 
+.info-window p {
+    margin: 1px;
+    padding: 0px;
+}
+
 .venue-photo {
+    width: 90%;
+    height: 100px;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
+}
+
+.sidebar-shown {
+    animation-name: fold-out;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.sidebar-hidden {
+    animation-name: fold-in;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.sidebar-hidden ol {
+    display: none;
+}
+
+#search-bar {
+    position: absolute;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    margin-top: 1px;
+}
+
+#search-bar p {
+    margin: 0px;
+}
+
+#list-results {
+    margin-top: 5vh;
+}
+
+@keyframes fold-out {
+    0% {
+	height: 5vh;
+	width: 20vw;
+    }
+
+    100% {
+	height: 30vh;
+	width: 20vw;
+    }
+}
+
+@keyframes fold-in {
+    0% {
+	height: 30vh;
+	width: 20vw;
+    }
+
+    100% {
+	height: 5vh;
+	width: 20vw;
+    }
+}
+
+@media screen and (max-width: 500px) {
+
+    #sidebar {
+	bottom: 10vh;
+    }
+
+    @keyframes fold-out {
+    0% {
+	height: 5vh;
+	width: 80vw;
+    }
+
+    100% {
+	height: 40vh;
+	width: 80vw;
+    }
+}
+
+@keyframes fold-in {
+    0% {
+	height: 30vh;
+	width: 80vw;
+    }
+
+    100% {
+	height: 5vh;
+	width: 80vw;
+    }
+}
 }
