--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
     margin-left: 20px;
     margin-top: 20px;
     background-color: rgba(100,100,100,0.7);
+    border-radius: 3px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -20,7 +21,7 @@
 }
 
 #sidebar input {
-    width: 85%;
+    width: 80%;
 }
 
 .sidebar-shown ol {
@@ -82,11 +83,12 @@
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    margin-top: 1px;
+    margin-top: 3px;
 }
 
 #search-bar p {
     margin: 0px;
+    padding: 3px;
 }
 
 #list-results {
@@ -117,7 +119,7 @@
     }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 800px) {
 
     #sidebar {
 	bottom: 10vh;
